[tool.poetry]
name = "test"
version = "0.1.1"
description = ""
authors = ["jens <jens.hortian@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jokes = "^0.1.7"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
